<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="comicz_name_free">Comic Viewer</string>
    <string name="comicz_name_pro">Comic Viewer Pro</string>
    <string name="file_name_free">File Manager</string>
    <string name="file_name_pro">File Manager Pro</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="sort">Sort</string>
    <string name="explorer">Directory</string>
    <string name="history">History</string>
    <string name="search">Search</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="both">Both</string>
    <string name="file_name">File name</string>
    <string name="back_pressed">To quit, press the back button again.</string>
    <string name="action_settings">Settings</string>
    <string name="no_contents">No contents</string>
    <string name="permissions">Request permissions</string>
    <string name="no_files">No files found.</string>
    <string name="msg_no_image_in_zip">There is no image in the compressed (ZIP) file.</string>
    <string name="dialog_review_title">Please support %s</string>
    <string name="dialog_review_content">Are you enjoying %s? Please leave a review for us!</string>
    <string name="msg_last_page">There is last page you read. (Page: %d)\nWould you like to continue?</string>
    <string name="action_clear_cache">Clear Cache</string>
    <string name="action_clear_history">Clear History</string>
    <string name="action_open_lastbook">Open Last Book</string>
    <string name="msg_last_book">Would you like to open the last book you read?</string>
    <string name="msg_clear_cache">Cache files were cleared.</string>
    <string name="msg_clear_history">Recent files list was cleared.</string>
    <string name="hide_completed_file">Hide completed files</string>

    <!-- 새로운 부분 -->
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="paste">Paste</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="delete">Del</string>
    <string name="new_folder">New folder</string>
    <string name="select_all">Select all</string>
    <string name="view_type">View type</string>
    <string name="msg_file_sort">Please select a file sort method.</string>
    <string name="file_ext">File extension</string>
    <string name="file_date">File date</string>
    <string name="file_size">File size</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="msg_file_rename">Please enter the name of the file to change.</string>
    <string name="msg_new_folder">Please enter the name of the new folder you want to create.</string>
    <string name="overwrite">Overwrite</string>
    <string name="skip">Skip</string>
    <string name="msg_overwrite">This file already exists. Do you want to overwrite?</string>
    <string name="toast_cancel">The request has been canceled.</string>
    <string name="toast_error">An error has occurred.</string>
    <string name="toast_file_rename">The file name has been changed.</string>
    <string name="toast_multi_rename_error">Renaming files is only possible when selecting one file.</string>
    <string name="toast_new_folder">A new folder has been created.</string>
    <string name="toast_select_all">Select the entire file.</string>
    <string name="toast_deselect_all">Deselect the entire file.</string>
    <string name="warn_file_delete">Are you sure you want to delete the %d selected files?</string>
    <string name="msg_file_delete">The selected file is being deleted.</string>
    <string name="toast_file_delete">The selected file has been deleted.</string>
    <string name="msg_file_paste_copy">Paste the file to copy here.</string>
    <string name="msg_file_paste_cut">Paste the file to be moved here.</string>
    <string name="toast_file_paste_copy">The files have been copied.</string>
    <string name="toast_file_paste_cut">The files have been moved.</string>
    <string name="warn_move_same_folder">You can not move to the same location.</string>
    <string name="warn_copy_same_folder">Copying to the same location creates a copy with a different name.</string>
    <string name="msg_file_unzip">Unzipping selected files.</string>
    <string name="toast_file_unzip">The files have been unzipped.</string>
    <string name="msg_file_zip">The selected files will be zipped.</string>
    <string name="toast_file_zip">The files have been zipped.</string>
    <string name="toast_new_version">A new version has been released.</string>

    <string name="cloud_storage">Cloud Storage</string>
    <string name="msg_cloud_logout">Do you want to logout from %s?</string>
    <string name="msg_cloud_download">The selected file is being downloaded.</string>
    <string name="toast_cloud_download">Downloading %s&#8230;</string>
    <string name="toast_cloud_complete">The file download is complete.</string>

    <!-- 설정 등 추가 -->
    <string name="viewer">Viewer</string>
    <string name="night_mode">Night mode color inversion</string>
    <string name="thumbnail_disabled">Disable thumbnails</string>
    <string name="japanese_direction">Read right page first</string>

    <string name="system">System</string>
    <string name="action_exit">Exit</string>
    <string name="execute">Execute</string>
    <string name="check">Check</string>
    <string name="version">Version</string>
    <string name="pro_version">Pro version</string>
    <string name="purchase">Purchase</string>

    <string name="msg_no_lastbook">There is no last reading book.</string>
    <string name="required_permission">Request required permissions\n\nPermissions: Use photos, media, files\nReason: Manage and decompress photos, media viewers, and files</string>

    <string name="paging_animation_disabled">Disable paging animation</string>
    <string name="auto_paging_time">Auto paging time</string>

    <string name="msg_next_book">Do you want to read the following book [%s]?</string>

    <string-array name="search_file">
        <item>Archive</item>
        <item>TXT</item>
        <item>PDF</item>
    </string-array>

    <string name="action_ad_remove">Ad remove</string>
    <string name="ad_remove_onetime">Ad remove 1 time</string>
    <string name="ad_remove_donate">Donate</string>
    <string name="ads">Ads</string>
    <string name="ad_remove_success">The ad will be removed for 1 hour.</string>
    <string name="ad_remove_fail">The ad has already been removed.</string>
    <string name="ad_not_loaded">The ad is not loaded.</string>

    <string name="donate_regularly">Donate regularly</string>
    <string name="donate_onetime">Donate one-time</string>

</resources>
