<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/sort_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/sort_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_name" />

            <RadioButton
                android:id="@+id/sort_ext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_ext" />

            <RadioButton
                android:id="@+id/sort_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_date" />

            <RadioButton
                android:id="@+id/sort_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_size" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/sort_direction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/sort_accending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ascending" />

            <RadioButton
                android:id="@+id/sort_descending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descending" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>