<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pro.myapplication.MainActivity">

    <item
        android:title="ViewType"
        android:id="@+id/action_view_type"
        android:icon="@drawable/list"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_clear_cache"
        android:orderInCategory="100"
        android:title="@string/action_clear_cache"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_history"
        android:orderInCategory="100"
        android:title="@string/action_clear_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_visible_test"
        android:orderInCategory="100"
        android:title="@string/action_visible_test"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
