<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/panel_top"
    android:layout_width="match_parent"
    android:layout_height="54dp"
    android:background="@color/colorPrimaryTransparent"
    android:orientation="vertical"
    android:visibility="invisible">

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/panel_top_option"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="invisible">

        <LinearLayout
            android:id="@+id/layout_left"
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_left"
                android:layout_width="45dp"
                android:layout_height="25dp"
                android:src="@drawable/flip"
                android:tint="@android:color/white" />

            <TextView
                android:id="@+id/text_left"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:gravity="center_horizontal"
                android:text="@string/left"
                android:textColor="@android:color/white"
                android:textSize="8sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_right"
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_right"
                android:layout_width="45dp"
                android:layout_height="25dp"
                android:scaleX="-1"
                android:src="@drawable/flip"
                android:tint="@android:color/white" />

            <TextView
                android:id="@+id/text_right"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:gravity="center_horizontal"
                android:text="@string/right"
                android:textColor="@android:color/white"
                android:textSize="8sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_both"
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_both"
                android:layout_width="45dp"
                android:layout_height="25dp"
                android:src="@drawable/both"
                android:tint="@android:color/white" />

            <TextView
                android:id="@+id/text_both"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:gravity="center_horizontal"
                android:text="@string/both"
                android:textColor="@android:color/white"
                android:textSize="8sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

