<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000"
    tools:context="com.duongame.explorer.activity.PagerActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <!--<TextView-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/text_path"-->
        <!--android:textColor="@android:color/holo_orange_dark"-->
        <!--android:textSize="12sp"-->
        <!--android:visibility="invisible"-->
        <!--android:ellipsize="start"/>-->

    <LinearLayout
        android:id="@+id/top_panel"
        android:background="@color/colorPrimaryTransparent"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:orientation="vertical"
        android:visibility="invisible">
        <TextView
            android:layout_gravity="center_horizontal|top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_name"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="12sp"
            />
        <LinearLayout
            android:id="@+id/top_side_panel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="invisible">

            <LinearLayout
                android:id="@+id/layout_left"
                android:layout_width="45dp"
                android:layout_height="35dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_left"
                    android:layout_width="45dp"
                    android:layout_height="25dp"
                    android:src="@drawable/flip"
                    android:tint="@android:color/white"/>
                <TextView
                    android:id="@+id/text_left"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:text="@string/left"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    android:textSize="8sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_right"
                android:layout_width="45dp"
                android:layout_height="35dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_right"
                    android:layout_width="45dp"
                    android:layout_height="25dp"
                    android:scaleX="-1"
                    android:src="@drawable/flip"
                    android:tint="@android:color/white"/>
                <TextView
                    android:id="@+id/text_right"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:text="@string/right"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    android:textSize="8sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_both"
                android:layout_width="45dp"
                android:layout_height="35dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_both"
                    android:layout_width="45dp"
                    android:layout_height="25dp"
                    android:src="@drawable/both"
                    android:tint="@android:color/white"/>
                <TextView
                    android:id="@+id/text_both"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:text="@string/both"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    android:textSize="8sp"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/colorPrimaryTransparent"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/text_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:padding="5dp"
            android:text="0/0"
            android:textColor="#ffffffff"
            android:textSize="12dp" />

        <SeekBar
            android:id="@+id/seek_page"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_gravity="bottom|center_horizontal"
            android:max="100"
            android:progress="50" >
        </SeekBar>
    </LinearLayout>

</FrameLayout>